# toyota

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  pyproject.toml.bk  setup.cfg  setup.py  toyota_environment.yml
dbt_toyota/: dbt_project.yml  profile.yml
dbt_toyota/models/: df_toyota.sql  schema.yml
documentacion/: helpers.py
init-sql/: init.sql
mlruns/.trash/440213370885700940/: meta.yaml
mlruns/0/: meta.yaml
mlruns/242573562896805006/: meta.yaml
mlruns/242573562896805006/02e7f069eb074e218860130ab3349ba9/: meta.yaml
mlruns/242573562896805006/040a6e9b1b134b3c8a8a732f27aa2b99/: meta.yaml
mlruns/242573562896805006/05f1804b3fb74c548d6f2214847618ec/: meta.yaml
mlruns/242573562896805006/08f076f8ab0f474e99dae59d1bbc846e/: meta.yaml
mlruns/242573562896805006/0d602b81332848a794b4d37db8e54825/: meta.yaml
mlruns/242573562896805006/10b5e0e1d4364965adf4d734bf985897/: meta.yaml
mlruns/242573562896805006/1cdfefd338734802bffb7860bd2b7ab2/: meta.yaml
mlruns/242573562896805006/1e6eae2cdf1c4613b32d239c6c729d68/: meta.yaml
mlruns/242573562896805006/282d2c5701154a4da821bbf67994ab96/: meta.yaml
mlruns/242573562896805006/3051768a98c3450aaca55512fbfd18d9/: meta.yaml
output/: data_clean.csv  dataset_clean.csv
parcial_toyota/: dbt_integrations.py  definitions.py
parcial_toyota/assets/: airbyte.py  clean_train_model.py  dbt.py  helper_asset.py  seleccion_models.py
parcial_toyota/notebooks/: EDA.ipynb  dataset.ipynb  helper_eda.py
parcial_toyota/resource/: __init__.py
(+554 files in other folders)
